# webex_bot

./: .coveragerc  AGENTS.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  example.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  main.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  conftest.py  test_command_model.py  test_commands.py  test_exceptions.py  test_formatting.py  test_response.py  test_webex_bot.py  test_webex_websocket_client.py
webex_bot/: __init__.py  exceptions.py  formatting.py  webex_bot.py
webex_bot/cards/: agenda_card.py  busy_card.py  echo_card.py  help_card.py
webex_bot/commands/: agenda.py  echo.py  help.py
webex_bot/models/: command.py  response.py
webex_bot/websockets/: webex_websocket_client.py
