[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webex_bot"
description = "Python package for a Webex Bot based on websockets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Finbarr Brady", email = "finbarr@somemail.com" },
]
keywords = ["webex_bot"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "webexpythonsdk==2.0.5",
    "coloredlogs",
    "websockets==16",
    "backoff",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "bump2version==1.0.1",
    "wheel==0.46.3",
    "watchdog==6.0.0",
    "flake8==7.3.0",
    "tox==4.34.1",
    "coverage==7.13.2",
    "Sphinx==8.1.3",
    "twine==6.2.0",
    "pytest==9.0.2",
    "pytest-cov==6.2.1",
    "pytest-runner==6.0.1",
]
proxy = ["websockets_proxy>=0.1.3"]

[project.urls]
Homepage = "https://github.com/fbradyirl/webex_bot"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["webex_bot", "webex_bot.*"]

[tool.setuptools.dynamic]
version = { attr = "webex_bot.__version__" }
