[metadata]
name = webex_bot
version = attr: webex_bot.__version__
description = Python package for a Webex Bot based on websockets.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    webexpythonsdk==2.0.5
    coloredlogs
    websockets==16
    backoff

[options.extras_require]
dev =
    bump2version==1.0.1
    wheel==0.46.3
    watchdog==6.0.0
    flake8==7.3.0
    tox==4.34.1
    coverage==7.13.2
    Sphinx==8.1.3
    twine==6.2.0
    pytest==9.0.2
    pytest-cov==6.2.1
    pytest-runner==6.0.1
proxy =
    websockets_proxy>=0.1.3

[bumpversion]
current_version = 1.1.4
commit = True
tag = True

[bumpversion:file:webex_bot/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts = --ignore=setup.py --cov=webex_bot --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=80
